fixed from php update

--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                     <div class="col-md-6">
                         <div class="contact__input__wrapper contact__grident__bg">
                             <form id="contact-form" class="contact-form"
-                                action="https://html.themewin.com/bastun-preview/bastun/mail.php" method="post">
+                            action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
@@ -960,26 +960,18 @@
                                     <div class="col-xl-6">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email">
+                                                id="con_email" placeholder="Email" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-6">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone">
+                                                placeholder="Phone" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
-                                        <select class="contact__common__input" name="subject" id="subject">
-                                            <option value="volvo">Subject:</option>
-                                            <option value="saab">Saab</option>
-                                            <option value="mercedes">Mercedes</option>
-                                            <option value="audi">Audi</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-xl-12">
                                         <textarea class="contact__common__input" name="con_message" id="con_message"
-                                            cols="30" rows="10">write a message....</textarea>
+                                            cols="30" rows="10" placeholder="write a message...."></textarea>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__button">
