--- a/seo.html
+++ b/seo.html
@@ -445,16 +445,16 @@
                                 <h2 class="heading">Search Engine Optimization (SEO)</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Nullam tincidunt sem ut
-                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
-                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On provides
+                                    full-service SEO services for organizations and companies to get them seen online,
+                                    targeted visitors, and practical results. We specialize in using the latest trends
+                                    in marketing and pairing them with the most effective techniques to drive results
+                                    that make a difference.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">Contact</a>
                                 </ul>
                             </div>
                         </div>
@@ -615,26 +615,15 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Search Engine Optimization (SEO)</h4>
+                                <h4>Why SEO Services from Digital Minds On?</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                    pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                    nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                    sagittis aliquam.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar.</p>
+                                <p>We understand that every business is unique. We discussed above how our team of SEO
+                                    experts researches and develops tactics tailored to your objectives. Starting from
+                                    the basic SEO keyword analysis right up to the SEO strategies, we offer the complete
+                                    package of SEO optimization services to help your brand pop out of the sea of
+                                    websites. </p>
+                                <p></p>
                             </div>
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
@@ -646,15 +635,18 @@
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
                                             <div class="service__details__planning__heading">
-                                                <h6>Implementation Planning:</h6>
+                                                <h2>Our SEO Services are all Encompassing</h2>
                                             </div>
                                             <div class="service__details__planning__text">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-                                                    facilisis mauris sit amet massa vitae tortor condimentum.</p>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-                                                    facilisis mauris sit amet massa vitae tortor condimentum.</p>
+                                                <div class="service__details__planning__heading">
+                                                    <h3>Keyword Research and Analysis</h3>
+                                                </div>
+                                                <p>The key to effective SEO is to choose the right keywords for the
+                                                    business to market. We do thorough SEO keyword analysis to come up
+                                                    with words that would be of interest to your audience and in line
+                                                    with the search term. Using the metrics of search volume,
+                                                    competition, and relevance, you know that your content targets the
+                                                    keywords that are valuable for your business.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -662,32 +654,54 @@
                             </div>
 
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Execution and Monitoring:</h4>
+                                <h4>On-Page Optimization</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc.Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                                    magna aliqua. Odio facilisis mauris sit amet massa vitae tortor condimentum. Etiam
-                                    sit amet nisl purus in mollis nunc sed. Quam vulputate dignissim suspendisse in est
-                                    ante in. Amet commodo nulla facilisi nullam vehicula. Arcu vitae elementum curabitur
-                                    vitae nunc.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet
-                                    massa vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc.Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                                    magna aliqua. Odio facilisis mauris sit amet massa vitae tortor condimentum. Etiam
-                                    sit amet nisl purus in mollis nunc sed. Quam vulputate dignissim suspendisse in est
-                                    ante in. Amet commodo nulla facilisi nullam vehicula. Arcu vitae elementum curabitur
-                                    vitae nunc.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet
-                                    massa vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc.</p>
+                                <p>We make an adjustment on your website to ensure that your site is more search engine
+                                    friendly which is achieved through SEO of key meta tags, headers, URL structures,
+                                    associated images, and even the ability for the site to be accessed by a smartphone
+                                    and the time it takes for the page to fully load. As for our website SEO analysis no
+                                    page or component of your site will ever fail to follow best practices for optimized
+                                    rankings.</p>
+
+                            </div>
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h4>Writing and SErating</h4>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p>The main and foundational aspect of SEO is the creation of high-quality and relevant
+                                    content. These SEO copywriting services come up with the right content that builds
+                                    the best strategies to build blogs, landing pages, and articles. This way
+                                    incorporating the keywords we are able to avoid keyword stuffing and still enhance
+                                    the usability and search engine authority of a website.</p>
+
+                            </div>
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h4>Technical SEO</h4>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p>Website technology is paramount when it comes to the optimization process. Our
+                                    semantic technical SEO services involve fixing crawl errors, performing site
+                                    architecture enhancement, structured data, and site speed. We carry out advanced SEO
+                                    competitor analysis to compare the performance of your site to competitors for
+                                    assessment of opportunities for enhancement.</p>
+
+                            </div>
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h4>Link Building</h4>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p>Effective link building is one of the key drivers of increasing the site's rank and
+                                    improving its performance. We use white hat SEO link-building techniques which
+                                    involve linking from reputable sites and adding high value to your domain while
+                                    obeying SE rules.</p>
+
+                            </div>
+                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                                <h4> Local SEO</h4>
+                            </div>
+                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                                <p></p>
 
                             </div>
 
@@ -699,7 +713,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Keyword Research.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/SEO/Keyword Research.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -716,7 +731,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/On-Page SEO.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/SEO/On-Page SEO.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -733,7 +749,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service//SEO/Technical SEO.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service//SEO/Technical SEO.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -751,7 +768,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Content Optimization.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/SEO/Content Optimization.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -769,7 +787,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Link Building.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/SEO/Link Building.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -786,7 +805,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Analytics and Reporting.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/SEO/Analytics and Reporting.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
