--- a/seo.html
+++ b/seo.html
@@ -701,7 +701,10 @@
                                 <h4> Local SEO</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p></p>
+                                <p>For businesses interested in local markets, our Local SEO services have your business
+                                    indexed to appear in local search results and Google My Business. This way, your
+                                    brand continues to be noticed by the customers who are around to patronize your
+                                    services immediately.</p>
 
                             </div>
 
