contact page title

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contact | Bastun- Business Consulting HTML Template</title>
+    <title>Contact | Digital Minds on- Business Consulting HTML Template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -550,8 +550,7 @@
                                 </div>
                                 <div class="contact__text">
                                     <h6>Hours:</h6>
-                                    <p>Monday - Friday: 8 AM - 5:30 PM</p>
-                                    <p>Saturday - Sunday: Closed</p>
+                                    <p>Monday - Sunday: 7/24 Hours</p>
                                 </div>
                             </div>
 
@@ -601,8 +600,8 @@
                                 </div>
                                 <div class="contact__text">
                                     <h6>Call Us:</h6>
-                                    <p>(+000) 987-3267</p>
-                                    <p>+88 568 956 238</p>
+                                    <p>(+92) 3086582833</p>
+                                    <p>(+92) 3207588171</p>
 
                                 </div>
                             </div>
@@ -636,8 +635,8 @@
                                 </div>
                                 <div class="contact__text">
                                     <h6>Location:</h6>
-                                    <p>242 Carlyle RdZebulon,</p>
-                                    <p>North Carolina(NC), 27597</p>
+                                    <p>Lahore, Pakistan</p>
+                                    <!-- <p>North Carolina(NC), 27597</p> -->
                                 </div>
                             </div>
                         </div>
