--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
                                                     <li><a href="wordpress.html">WordPress Development </a></li>
-                                                    <li><a href="#">Content Creator</a></li>
+                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
                                                     <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
 
                                                 </ul>
@@ -948,8 +948,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="contact__input__wrapper contact__grident__bg">
-                            <form id="contact-form" class="contact-form"
-                            action="email.php">
+                            <form id="contact-form" class="contact-form" action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
